delete data design and code update

--- a/src/css/MainScreenstyle.css
+++ b/src/css/MainScreenstyle.css
@@ -1,5 +1,10 @@
 
 /* --------------    parent container styles    ------------------- */
+
+img {
+  pointer-events: none;
+}
+
 .mainheader {
     /* min-height: 100vh; */
     /* display: flex; */
